# Discord-ticket-Bot

./: Cargo.toml  README.md  _env
src/: main.rs
