[package]
name = "Discord-ticket-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rand = "0.8"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"